# SegOid

./: .gitignore  AUTONOMOUS_SESSION.md  CLAUDE.md  CURRENT_TASK.md  FLYWHEEL_MASTER_PLAN.md  PHASE_6_AUTONOMOUS_REPORT.md  PRODUCTION_QUICK_START.md  PRODUCTION_TRAINING_SUMMARY.md  README.md  SDD.md  analyze_gt_morphology.py  gt_morphology.csv  pyproject.toml  run_autonomous_session.sh
archive/dev/: README_original.md
archive/validation_autonomous_202512/: AUTONOMOUS_SESSION.md  PHASE_6_AUTONOMOUS_REPORT.md
configs/: README.md  cv_config.yaml  cv_test_quick.yaml  dataset.yaml  production_train.yaml  sanity_check.yaml  train.yaml
docs/: PRODUCTION_MODEL.md  SDD.md
scripts/: test_model_loading.py
segoid/: __init__.py
src/: cli.py
src/analysis/: quantify.py
src/data/: cross_validation.py  dataset.py  validate.py
src/inference/: predict.py
src/training/: cross_validation.py  train.py  visualize.py
src/visualization/: __init__.py  review.py
tests/: test_cross_validation.py  test_dataset.py  test_inference.py  test_quantify.py  test_training.py  test_validate.py
