[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "segoid"
version = "0.1.0"
description = "Spheroid segmentation pipeline using PyTorch U-Net"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Rtasseff"}
]

dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "segmentation-models-pytorch>=0.3.3",
    "albumentations>=1.3.0",
    "tifffile>=2023.0.0",
    "imagecodecs>=2023.0.0",
    "imageio>=2.31.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-image>=0.21.0",
    "scipy>=1.11.0",
    "opencv-python>=4.8.0",
    "tqdm>=4.65.0",
    "tensorboard>=2.13.0",
    "pyyaml>=6.0",
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[project.scripts]
validate_dataset = "src.cli:validate_dataset"
make_splits = "src.cli:make_splits"
sanity_check = "src.cli:sanity_check"
train = "src.cli:train"
predict_full = "src.cli:predict_full"
quantify_objects = "src.cli:quantify_objects"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
